fix: change grid-row-gap

--- a/blocks/places/__card/places__card.css
+++ b/blocks/places/__card/places__card.css
@@ -1,5 +1,4 @@
 .places__card{
     display: flex;
     flex-direction: column;
-    margin-bottom: 7.5%;
 }
